# exfat-fs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: boot_sector.rs  dir.rs  disk.rs  error.rs  fat.rs  lib.rs  main.rs  root.rs  sector.rs  timestamp.rs  upcase_table.rs
src/boot/: checksum.rs  fat.rs  format.rs  meta.rs  mod.rs  sector.rs
src/cluster/: mod.rs  reader.rs
src/dir/: entry.rs  mod.rs
src/dir/entry/: mod.rs  parsed.rs
src/dir/entry/fs/: directory.rs  file.rs  mod.rs
src/dir/reader/: cluster.rs  mod.rs
src/entry/: mod.rs  parsed.rs  reader.rs
src/format/: boot.rs  boot_sector.rs  fat.rs  mod.rs  upcase_table.rs  util.rs
src/fs/: directory.rs  file.rs  mod.rs
