[package]
name = "exfat-fs"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "exFAT filesystem formatting"
repository = "https://github.com/Benstoy/exfat-fs"
authors = ["Hannah Fluch"]
keywords = ["exfat", "filesystem"]
categories = ["filesystem"]
exclude = [".github/*"]

[dependencies]
endify = "0.1.2"
bitflags = { version = "2.9.0", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive", "min_const_generics"] }
checked_num = "0.1.3"
derive_builder = "0.20.2"
thiserror = "2.0.11"
