[package]
name = "exfat-fs"
version = "0.1.2"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "exFAT filesystem formatting"
repository = "https://github.com/hannahfluch/exfat-fs"
authors = ["Hannah Fluch"]
keywords = ["exfat", "filesystem"]
categories = ["filesystem", "no-std"]
exclude = [".github/*"]

[dependencies]
endify = "0.1.2"
bitflags = { version = "2.9.0", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive", "min_const_generics"] }
checked_num = "0.1.3"
derive_builder = "0.20.2"
thiserror = { version = "2.0.11", default-features = false}
enumeric = "0.1.2"

[features]
default = ["std"]
std = []
